--- a/other-organizations-that-issue-donation-receipts-qualified-donees/canadian-amateur-athletic-associations.html
+++ b/other-organizations-that-issue-donation-receipts-qualified-donees/canadian-amateur-athletic-associations.html
@@ -12,8 +12,8 @@
 
 
 	<link rel="schema.dcterms" href="http://purl.org/dc/terms/"/>
-	<link rel="canonical" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/other-organizations-that-issue-donation-receipts-qualified-donees/canadian-amateur-athletic-associations.html"/>
-    <link rel="alternate" hreflang="en" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/other-organizations-that-issue-donation-receipts-qualified-donees/canadian-amateur-athletic-associations.html"/>
+	<link rel="canonical" href="https://cra-design.github.io/charitiesother-organizations-that-issue-donation-receipts-qualified-donees/canadian-amateur-athletic-associations.html"/>
+    <link rel="alternate" hreflang="en" href="https://cra-design.github.io/charitiesother-organizations-that-issue-donation-receipts-qualified-donees/canadian-amateur-athletic-associations.html"/>
 	
         <link rel="alternate" hreflang="fr" href="https://www.canada.ca/fr/agence-revenu/services/organismes-bienfaisance-dons/autres-organismes-peuvent-remettre-recus-dons-donataires-reconnus/associations-canadiennes-sport-amateur.html"/>
 	
@@ -286,8 +286,8 @@ Canadian amateur athletic associations</h1>
         <p>The following&nbsp;links include the list of Canadian amateur athletic associations that are registered as qualified donees and information about their obligations under the Income Tax Act.</p>
 <ul>
 <li><a href="https://apps.cra-arc.gc.ca/ebci/hacc/srch/pub/dsplyBscSrch?request_locale=en">List of charities and certain other qualified donees</a></li>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/other-organizations-that-issue-donation-receipts-qualified-donees/canadian-amateur-athletic-associations.html#ss">Issuing official donation receipts</a></li>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/other-organizations-that-issue-donation-receipts-qualified-donees/canadian-amateur-athletic-associations.html#bk">Books and records&nbsp;</a></li>
+<li><a href="https://cra-design.github.io/charitiesother-organizations-that-issue-donation-receipts-qualified-donees/canadian-amateur-athletic-associations.html#ss">Issuing official donation receipts</a></li>
+<li><a href="https://cra-design.github.io/charitiesother-organizations-that-issue-donation-receipts-qualified-donees/canadian-amateur-athletic-associations.html#bk">Books and records&nbsp;</a></li>
 </ul>
 
     
