Fixing whitespace in links + double folder path /charities/charities/

--- a/charities-giving-a-index.html
+++ b/charities-giving-a-index.html
@@ -12,8 +12,8 @@
 
 
 	<link rel="schema.dcterms" href="http://purl.org/dc/terms/"/>
-	<link rel="canonical" href="https://cra-design.github.io/charities/charities-giving-a-index.html"/>
-    <link rel="alternate" hreflang="en" href="https://cra-design.github.io/charities/charities-giving-a-index.html"/>
+	<link rel="canonical" href="https://cra-design.github.io/charities-giving-a-index.html"/>
+    <link rel="alternate" hreflang="en" href="https://cra-design.github.io/charities-giving-a-index.html"/>
 	
         <link rel="alternate" hreflang="fr" href="https://www.canada.ca/fr/agence-revenu/services/organismes-bienfaisance-dons/organismes-bienfaisance/organismes-bienfaisance-dons-index-a-a.html"/>
 	
@@ -403,15 +403,15 @@ Charities and giving – A to Z index</h1>
 <td>planned giving, life interest, receipt</td>
 </tr><tr><td><a href="https://cra-design.github.io/charities/policies-guidance/charitable-work-ethnocultural-groups-information-on-registering-a-charity.html">Charitable work and ethnocultural groups - information on registering as a charity,&nbsp;CG-003</a></td>
 <td>apply, multiculturalism, multi-ethnic, immigrant</td>
-</tr><tr><td><a href="https://cra-design.github.io/charities/charities-giving-glossary.html">Charities and giving glossary</a></td>
+</tr><tr><td><a href="https://cra-design.github.io/charities-giving-glossary.html">Charities and giving glossary</a></td>
 <td>definition</td>
 </tr><tr><td><a href="https://cra-design.github.io/charities/guidance-videos-forms/charities-information-sessions.html">Charities information sessions</a></td>
 <td>&nbsp;</td>
-</tr><tr><td><a href="https://cra-design.github.io/charities/charities-media-kit.html">Charities media kit</a></td>
+</tr><tr><td><a href="https://cra-design.github.io/charities-media-kit.html">Charities media kit</a></td>
 <td>&nbsp;</td>
-</tr><tr><td><a href="https://cra-design.github.io/charities/charities-media-kit/charities-program-government-canada-actively-supporting-charitable-sector.html">Charities program</a></td>
+</tr><tr><td><a href="https://cra-design.github.io/charities-media-kit/charities-program-government-canada-actively-supporting-charitable-sector.html">Charities program</a></td>
 <td>media kit</td>
-</tr><tr><td><a href="https://cra-design.github.io/charities/charities-media-kit/charities-program-facts-figures.html">Charities program facts and figures</a></td>
+</tr><tr><td><a href="https://cra-design.github.io/charities-media-kit/charities-program-facts-figures.html">Charities program facts and figures</a></td>
 <td>media kit</td>
 </tr><tr><td><a href="https://cra-design.github.io/charities/about-charities-directorate/charities-program-update-2013.html">Charities Program Update - 2013</a></td>
 <td>&nbsp;</td>
@@ -867,7 +867,7 @@ Charities and giving – A to Z index</h1>
 <td>donation</td>
 </tr><tr><td><a href="https://cra-design.github.io/charities/operating-a-registered-charity/questions-answers-about-operating-a-registered-charity.html">Questions and answers about operating a registered charity</a></td>
 <td>&nbsp;</td>
-</tr><tr><td><a href="https://cra-design.github.io/charities/charities-media-kit/questions-answers-media.html">Questions and answers for the media</a></td>
+</tr><tr><td><a href="https://cra-design.github.io/charities-media-kit/questions-answers-media.html">Questions and answers for the media</a></td>
 <td>&nbsp;</td>
 </tr><tr><td><a href="https://cra-design.github.io/charities/policies-guidance/summary-policy-r25-revocation.html">RCAAA - revocation, CSP-R25</a></td>
 <td>canadian amateur athletic association, qualified donee, QD</td>
@@ -1003,7 +1003,7 @@ Charities and giving – A to Z index</h1>
 <td>real property, real estate</td>
 </tr><tr><td><a href="https://cra-design.github.io/charities/operating-a-registered-charity/toolbox-directors-officers-volunteers.html">Toolbox for directors, officers, and volunteers</a></td>
 <td>resources, assistance, help</td>
-</tr><tr><td><a href="https://cra-design.github.io/charities/charities-media-kit/top-10-facts-about-regulation-charities.html">Top 10 facts about the regulation of charities</a></td>
+</tr><tr><td><a href="https://cra-design.github.io/charities-media-kit/top-10-facts-about-regulation-charities.html">Top 10 facts about the regulation of charities</a></td>
 <td>media kit</td>
 </tr><tr><td><a href="https://cra-design.github.io/charities/operating-a-registered-charity/transition-new-bc-societies-act.html">Transition to the new B.C. Societies Act</a></td>
 <td>British Columbia</td>
@@ -1027,7 +1027,7 @@ Charities and giving – A to Z index</h1>
 <td>registration, apply</td>
 </tr><tr><td><a href="https://cra-design.github.io/charities/policies-guidance/using-intermediary-carry-a-charitys-activities-within-canada.html">Using an intermediary to carry on a charity's activities within Canada, CG-004</a></td>
 <td>direction and control, conduit</td>
-</tr><tr><td><a href="https://cra-design.github.io/charities/charities-media-kit/what-registered-charities.html">What are registered charities?</a></td>
+</tr><tr><td><a href="https://cra-design.github.io/charities-media-kit/what-registered-charities.html">What are registered charities?</a></td>
 <td>media kit</td>
 </tr><tr><td><a href="https://cra-design.github.io/charities/operating-a-registered-charity/issuing-receipts/what-information-must-on-official-donation-receipt-a-registered-charity.html">What information must be on an official donation receipt from a registered charity</a></td>
 <td>gift, donation, de minimis, advantage, FMV, fair market value, receipt</td>
