--- a/charities-media-kit.html
+++ b/charities-media-kit.html
@@ -12,8 +12,8 @@
 
 
 	<link rel="schema.dcterms" href="http://purl.org/dc/terms/"/>
-	<link rel="canonical" href="https://cra-design.github.io/charities/charities-media-kit.html"/>
-    <link rel="alternate" hreflang="en" href="https://cra-design.github.io/charities/charities-media-kit.html"/>
+	<link rel="canonical" href="https://cra-design.github.io/charities-media-kit.html"/>
+    <link rel="alternate" hreflang="en" href="https://cra-design.github.io/charities-media-kit.html"/>
 	
         <link rel="alternate" hreflang="fr" href="https://www.canada.ca/fr/agence-revenu/services/organismes-bienfaisance-dons/trousse-medias-organismes-bienfaisance.html"/>
 	
@@ -284,11 +284,11 @@ Charities media kit</h1>
     
         <h2><strong>Overview of the Charities Program</strong></h2>
 <ul>
-<li><a href="https://cra-design.github.io/charities/charities-media-kit/charities-program-government-canada-actively-supporting-charitable-sector.html">Charities program</a></li>
+<li><a href="https://cra-design.github.io/charities-media-kit/charities-program-government-canada-actively-supporting-charitable-sector.html">Charities program</a></li>
 <li><a href="https://cra-design.github.io/charities/about-charities-directorate/report-on-charities-program.html">Report on the Charities Program 2016 to 2018</a></li>
-<li><a href="https://cra-design.github.io/charities/charities-media-kit/charities-program-facts-figures.html">Charities program facts and figures </a></li>
-<li><a href="https://cra-design.github.io/charities/charities-media-kit/top-10-facts-about-regulation-charities.html">Top 10 facts about the regulation of charities</a></li>
-<li><a href="https://cra-design.github.io/charities/charities-media-kit/what-registered-charities.html">What are registered charities?</a></li>
+<li><a href="https://cra-design.github.io/charities-media-kit/charities-program-facts-figures.html">Charities program facts and figures </a></li>
+<li><a href="https://cra-design.github.io/charities-media-kit/top-10-facts-about-regulation-charities.html">Top 10 facts about the regulation of charities</a></li>
+<li><a href="https://cra-design.github.io/charities-media-kit/what-registered-charities.html">What are registered charities?</a></li>
 <li><a href="https://cra-design.github.io/charities/whats-new.html">What's new for charities</a></li>
 </ul>
 
@@ -330,7 +330,7 @@ Charities media kit</h1>
  <ul> 
  <li><a href="https://cra-design.github.io/charities/information-about-a-charity.html">How to get information about a charity </a></li> 
  <li><a href="https://www.canada.ca/en/revenue-agency/news/newsroom/media-contact-list.html">Media contact list </a></li> 
- <li><a href="https://cra-design.github.io/charities/charities-media-kit/questions-answers-media.html">Questions and answers for the media</a></li> 
+ <li><a href="https://cra-design.github.io/charities-media-kit/questions-answers-media.html">Questions and answers for the media</a></li> 
 </ul>  
     
 
