--- a/charity-news-contact-us.html
+++ b/charity-news-contact-us.html
@@ -415,7 +415,7 @@ Charity news and contact us</h1>
         		
 <section class="gc-drmt">
 	<h3 data-emptyText="Enter heading" class="h5">
-		<a href="https://cra-design.github.io/charities/charities-media-kit.html">Media kit</a>
+		<a href="https://cra-design.github.io/charities-media-kit.html">Media kit</a>
 	</h3>
 	
 	
