updated charity media kit links

--- a/charities-giving-a-index.html
+++ b/charities-giving-a-index.html
@@ -407,7 +407,7 @@ Charities and giving – A to Z index</h1>
 <td>definition</td>
 </tr><tr><td><a href="https://cra-design.github.io/charities/guidance-videos-forms/charities-information-sessions.html">Charities information sessions</a></td>
 <td>&nbsp;</td>
-</tr><tr><td><a href="https://cra-design.github.io/charities-media-kit.html">Charities media kit</a></td>
+</tr><tr><td><a href="https://cra-design.github.io/charities/charities-media-kit.html">Charities media kit</a></td>
 <td>&nbsp;</td>
 </tr><tr><td><a href="https://cra-design.github.io/charities-media-kit/charities-program-government-canada-actively-supporting-charitable-sector.html">Charities program</a></td>
 <td>media kit</td>
