--- a/charities-media-kit.html
+++ b/charities-media-kit.html
@@ -12,8 +12,8 @@
 
 
 	<link rel="schema.dcterms" href="http://purl.org/dc/terms/"/>
-	<link rel="canonical" href="https://cra-design.github.io/charities-media-kit.html"/>
-    <link rel="alternate" hreflang="en" href="https://cra-design.github.io/charities-media-kit.html"/>
+	<link rel="canonical" href="https://cra-design.github.io/charities/charities-media-kit.html"/>
+    <link rel="alternate" hreflang="en" href="https://cra-design.github.io/charities/charities-media-kit.html"/>
 	
         <link rel="alternate" hreflang="fr" href="https://www.canada.ca/fr/agence-revenu/services/organismes-bienfaisance-dons/trousse-medias-organismes-bienfaisance.html"/>
 	
