--- a/about-registered-charities/what-difference-between-a-registered-charity-a-non-profit-organization.html
+++ b/about-registered-charities/what-difference-between-a-registered-charity-a-non-profit-organization.html
@@ -574,12 +574,13 @@ Differences between a registered charity and a non-profit organization</h1>
                 </tr>
             </thead>
             <tbody>
-                <tr>
+                 <tr>
                     <td data-label="Topic">Purposes</td>
-                    <td data-label="Registered charity" class="text-right">Must be established and operate exclusively for charitable purposes</td>
-                    <td data-label="NPO" class="text-right">
+                    <td data-label="Registered charity" >Must be established and operate exclusively for charitable purposes</td>
+                    <td data-label="NPO">
                         <ul class="list-unstyled">
                         <li>Can operate for social welfare, civic improvement, pleasure, sport, recreation, or any other purpose except profit</li>
+                        <br>
                         <li>Cannot operate exclusively for charitable purposes</li> 
                         </ul>           
                     </td>
