--- a/charities-and-giving.html
+++ b/charities-and-giving.html
@@ -508,31 +508,31 @@ background-color: #26384a !important
     <div class="row">
         <!-- showing the basic doormat pattern - refer to the Services and information documentation for options -->
         <section class="gc-srvinfo col-md-12">
-            <h2 class="wb-inv">Services and information</h2>
+        <h2 class="wb-inv">Donate to a charity or other qualified donee</h2>
             <div class="wb-eqht row">
                 <div class="col-lg-4 col-md-6">
-                    <h3><a href="https://cra-design.github.io/charities/list-charities/list-charities-other-qualified-donees.html">List of charities and other qualified donees</a></h3>
-                    <p>Find a charity or other qualified donee, their registered status, and their publicly available information.</p>
+                    <h3><a href="https://cra-design.github.io/charities/list-charities/list-charities-other-qualified-donees.html">List of charities and certain other qualified donees</a></h3>
+                    <p>Registration status, how to find information about an organization.</p>
                 </div>
                 <div class="col-lg-4 col-md-6">
                     <h3><a href="https://cra-design.github.io/charities/other-organizations-that-issue-donation-receipts-qualified-donees.html">Other organizations that can issue donation receipts</a></h3>
-                    <p>Lists of qualified donees, their application processes and obligations.</p>
+                    <p>Types of other qualified donees, their application processes and obligations.</p>
                 </div>
                 <div class="col-lg-4 col-md-6">
-                    <h3><a href="https://cra-design.github.io/charities/charities-giving-a-index.html">A to Z index of topics for charities</a></h3>
-                    <p>Search for information about charities and giving.</p>
+                    <h3><a href="https://cra-design.github.io/charities/giving-charity-information-donors.html">Giving to charity</a></h3>
+                    <p>Donating to charities and other organizations, avoiding fraud or donation tax shelter schemes.</p>
                 </div>
-                <div class="col-lg-4 col-md-6">
-                    <h3><a href="https://cra-design.github.io/charities/registering-charitable-qualified-donee-status.html">Registering for charitable or other qualified donee status</a></h3>
-                    <p>Apply for charitable registration or other qualified donee. <span class="nowrap">Re-registration.</span> Objections and appeals.</p>
-                </div>
+
+             </div>
+        <h2 class="wb-inv">Maintain an existing charity or other qualified donee</h2>
+            <div class="wb-eqht row">
                 <div class="col-lg-4 col-md-6">
                     <h3><a href="https://cra-design.github.io/charities/operating-a-registered-charity.html">Operating a registered charity</a></h3>
                     <p>Filing a return, gifting and receipting, charitable activities, books and records.</p>
                 </div>
                 <div class="col-lg-4 col-md-6">
-                    <h3><a href="https://cra-design.github.io/charities/operating-a-registered-charity/fundraising-activities-charities-other-qualified-donees.html">Fundraising activities</a></h3>
-                    <p>Activities, issuing receipts for fundraising events, <span class="nowrap">cause-related</span> marketing.</p>
+                    <h3><a href="https://cra-design.github.io/charities/charities-giving-a-index.html">A to Z index of topics for charities</a></h3>
+                    <p>Search for information using keywords.</p>
                 </div>
                 <div class="col-lg-4 col-md-6">
                     <h3><a href="https://cra-design.github.io/charities/revoking-registered-status.html">Revoking registered status</a></h3>
@@ -542,21 +542,26 @@ background-color: #26384a !important
                     <h3><a href="https://cra-design.github.io/charities/compliance-audits-and-sanctions.html">Compliance, audits and sanctions</a></h3>
                     <p>Audit process, consequences of <span class="nowrap">non-compliance,</span> sanctions and appeal rights.</p>
                 </div>
-                <div class="col-lg-4 col-md-6">
-                    <h3><a href="https://cra-design.github.io/charities/giving-charity-information-donors.html">Giving to charity</a></h3>
-                    <p>Who can issue official donation receipts, how to claim donations on your income tax and benefit return, how to donate wisely and avoid fraud.</p>
-                </div>
+
                 <div class="col-lg-4 col-md-6">
                     <h3><a href="https://cra-design.github.io/charities/guidance-videos-forms.html">Guidance, videos, forms and more</a></h3>
                     <p>Guidance products and policies, videos, forms,&nbsp;checklists and Charities information sessions.</p>
                 </div>
                 <div class="col-lg-4 col-md-6">
                     <h3><a href="https://cra-design.github.io/charities/charity-news-contact-us.html">Charity news and contact us</a></h3>
-                    <p>Recent news and updates on our web pages.</p>
+                    <p>Recent news and updates.</p>
                 </div>
+             </div>
+        <h2 class="wb-inv">Register a new charity or other qualified donee</h2>
+            <div class="wb-eqht row">
+                <div class="col-lg-4 col-md-6">
+                    <h3><a href="https://cra-design.github.io/charities/registering-charitable-qualified-donee-status.html">Apply to become a registered charity or other qualified donee status</a></h3>
+                    <p>Apply to register or re-register, how to send an objection or appeal.</p>
+                </div>
+
                 <div class="col-lg-4 col-md-6">
                     <h3><a href="https://cra-design.github.io/charities/about-registered-charities.html">About registered charities</a></h3>
-                    <p>Their regulation and obligations, how they differ from non-profit organizations.</p>
+                    <p>Regulating charities,obligations of a charity, differences between charities and non-profit organizations.</p>
                 </div>
             </div>
         </section>
