--- a/charities-and-giving.html
+++ b/charities-and-giving.html
@@ -508,7 +508,7 @@ background-color: #26384a !important
     <div class="row">
         <!-- showing the basic doormat pattern - refer to the Services and information documentation for options -->
         <section class="gc-srvinfo col-md-12">
-        <h2 class="wb-inv">Donate to a charity or other qualified donee</h2>
+        <h2>Donate to a charity or other qualified donee</h2>
             <div class="wb-eqht row">
                 <div class="col-lg-4 col-md-6">
                     <h3><a href="https://cra-design.github.io/charities/list-charities/list-charities-other-qualified-donees.html">List of charities and certain other qualified donees</a></h3>
@@ -524,7 +524,7 @@ background-color: #26384a !important
                 </div>
 
              </div>
-        <h2 class="wb-inv">Maintain an existing charity or other qualified donee</h2>
+        <h2>Maintain an existing charity or other qualified donee</h2>
             <div class="wb-eqht row">
                 <div class="col-lg-4 col-md-6">
                     <h3><a href="https://cra-design.github.io/charities/operating-a-registered-charity.html">Operating a registered charity</a></h3>
@@ -552,7 +552,7 @@ background-color: #26384a !important
                     <p>Recent news and updates.</p>
                 </div>
              </div>
-        <h2 class="wb-inv">Register a new charity or other qualified donee</h2>
+        <h2>Register a new charity or other qualified donee</h2>
             <div class="wb-eqht row">
                 <div class="col-lg-4 col-md-6">
                     <h3><a href="https://cra-design.github.io/charities/registering-charitable-qualified-donee-status.html">Apply to become a registered charity or other qualified donee status</a></h3>
