--- a/charities-and-giving.html
+++ b/charities-and-giving.html
@@ -633,23 +633,18 @@ background-color: #26384a !important
     </div>
 </div>
 <div class="container">
-    <div class="row">
-        <section class="col-md-8">
-            <h2 class="wb-inv">Contributors</h2>
-            <div class="col-md-1 text-left">
-                <h3 class="provisional from">From:</h3>
-            </div>
-            <div class="provisional contributors col-md-auto">
-                <ul>
-                    <li><a href="https://www.canada.ca/en/revenue-agency.html">Canada Revenue Agency</a></li>
-                </ul>
-            </div>
-        </section>
-        <section class="col-md-4 mrgn-bttm-sm">
-            <div data-ajax-replace="https://www.canada.ca/content/dam/cra-arc/includes/social-media.txt#social-media-en">
-            </div>
-        </section>
-    </div>
+	<div class="row">
+		<section class="gc-contributors col-md-8 mrgn-tp-md">
+			<h2>From:</h2>
+			<ul>
+				<li><a href="/en/revenue-agency.html">Canada Revenue Agency</a></li>
+			</ul>
+		</section>
+		<section class="col-md-4 mrgn-bttm-sm mrgn-tp-md">
+			<div data-ajax-replace="/content/dam/cra-arc/includes/social-media.txt#social-media-en">
+			</div>
+		</section>
+	</div>
 </div>
 <div class="container">
     <div class="row">
